--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -40,7 +40,7 @@
                 app:boxStrokeColor="@color/yellow"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -59,7 +59,7 @@
                 app:boxStrokeColor="@color/yellow"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 app:passwordToggleEnabled="true"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
@@ -93,10 +93,10 @@ android:backgroundTint="@color/black"
                 android:id="@+id/registerLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register User"
+                android:text="Register Account"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/montserrat_bold"/>
 
