--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -49,7 +49,7 @@
                 app:boxStrokeColor="@color/yellow"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -59,6 +59,7 @@
                     android:layout_height="match_parent"
                     android:hint="Email"
                     android:textSize="15dp"
+                    android:id="@+id/registeremail"
                     android:fontFamily="@font/nunitosansregular"
                     android:inputType="textEmailAddress"
                     android:paddingLeft="10dp"/>
@@ -67,7 +68,7 @@
                 app:boxStrokeColor="@color/yellow"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 app:passwordToggleEnabled="true"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
@@ -78,6 +79,7 @@
                     android:layout_height="match_parent"
                     android:hint="Password"
                     android:textSize="15dp"
+                    android:id="@+id/registerPassword"
                     android:fontFamily="@font/nunitosansregular"
                     android:inputType="textPassword"
                     android:paddingLeft="10dp"/>
@@ -87,7 +89,7 @@
                 app:boxStrokeColor="@color/yellow"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 app:passwordToggleEnabled="true"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
@@ -98,6 +100,7 @@
                     android:layout_height="match_parent"
                     android:hint="Repeat Password"
                     android:textSize="15dp"
+                    android:id="@+id/registerConfirmPassword"
                     android:fontFamily="@font/nunitosansregular"
                     android:inputType="textPassword"
                     android:paddingLeft="10dp"/>
@@ -105,6 +108,7 @@
 
 
             <Button
+                android:id="@+id/registerUser"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginRight="40dp"
@@ -117,6 +121,7 @@
                 android:textColor="@color/yellow"/>
 
             <TextView
+                android:id="@+id/loginLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Have an account? LOGIN"
