added some outlet design

--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -25,6 +25,15 @@
                 android:textSize="25dp"
                 android:textColor="@color/black"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/nunitosansregular"
+                android:id="@+id/greetings"
+                android:textColor="@color/black"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
