--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,27 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowDisablePreview">true</item>
+
+        <item name="android:windowIsTranslucent">true</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+
+
+    -<style name="DialogAnimation">
+
+    <item name="android:windowEnterAnimation">@anim/slide_up</item>
+
+    <item name="android:windowExitAnimation">@anim/slide_bottom</item>
+
+</style>
+
+
+    -<style name="CustomDialogTheme">
+
+    <item name="android:windowBackground">@android:color/transparent</item>
+
+</style>
 </resources>
