--- a/app/src/main/res/layout/oulet_list.xml
+++ b/app/src/main/res/layout/oulet_list.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        android:layout_marginBottom="10dp"
         app:cardBackgroundColor="@color/white"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
