--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -57,7 +57,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Email"
+                    android:hint="Username"
                     android:id="@+id/user_email"
                     android:textSize="15dp"
                     android:fontFamily="@font/nunitosansregular"
@@ -98,16 +98,16 @@ android:backgroundTint="@color/black"
                 android:fontFamily="@font/montserrat_bold"
                 android:textColor="@color/yellow"/>
 
-            <TextView
-                android:id="@+id/registerLink"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Register Account"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat_bold"/>
+<!--            <TextView-->
+<!--                android:id="@+id/registerLink"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Register Account"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginBottom="20dp"-->
+<!--                android:textSize="18dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:fontFamily="@font/montserrat_bold"/>-->
 
         </LinearLayout>
     </ScrollView>
